--- a/frontend/src/app/components/app-header/app-header.component.html
+++ b/frontend/src/app/components/app-header/app-header.component.html
@@ -1,17 +1,33 @@
  
 <!-- <app-header> -->   
+
+	<!-- <div *ngIf="!isMatSelectOpen; then thenBlock"></div>
+    <ng-template #thenBlock>
+        <div class="SEO_lang_links-wr">
+            <a *ngFor="let lang of getAlternateLanguages()" href="{{locationService.getLocalizationPathWith(lang)}}">{{lang}}</a>
+        </div>
+    </ng-template> -->
     
 	<div class="header" #headerMenu id="headerMenu">
 		<div class="container">
+			<div class="toolbar-link" (click)="toggleSidebar(true)">
+                <div class="hamburger" #hamburger >
+                    <div class="hamburger-box">
+                        <div class="hamburger-inner"></div>
+                    </div>
+                </div>
+            </div>
 			<div class="logo" itemscope itemtype="http://schema.org/Organization" >
 				<!-- <a routerLink = "{{sharedService.link}}" class="myLink">a</a> -->
 				<img src="/assets/images/main_logo.svg" 
 					alt="main-logo" 
 					class="logo-top" 
-					(click)="goHome($event)">
+					(click)="goHome($event)"
+				>
 			</div>
 
-			<div class="header-tab">
+			<div class="header-tab" #headerNav>
+
 				<ul class="link-block">
 					<li class="link-block_list" *ngFor="let routConfig of mainLinkConfig">
 						<a [routerLink]="locationService.joinWithLangRoutePath(routConfig.url)"
@@ -23,9 +39,50 @@
 						</a>
 					</li>
 				</ul>
+
+				<ul class="auth-block">
+					<ng-container *ngFor="let routConfig of accountLinkConfig;let i = index">
+						<li *ngIf="routConfig.availability?!userActive:userActive"
+							class="auth-block_list">
+							<a [routerLink]="locationService.joinWithLangRoutePath(routConfig.url)" 
+								CorrectLinkHref 
+								class="link"
+								[routerLinkActive]="'is-active'"
+								[routerLinkActiveOptions]="{exact: true}">
+								{{routConfig.name[modelLang]}}
+							</a>
+						</li>
+					</ng-container>
+					<li *ngIf="userActive" class="auth-block_list">
+						<a (click)="logout()" class="link">{{logoutName}}</a>
+					</li>
+				</ul>
+
+				<div class="social-block"></div>
+
+				<div class="lang-box">
+					<mat-form-field>
+						<mat-select 
+							class="mat-lang"
+							[(ngModel)]="modelLang"
+							(openedChange)="onOpenedChange($event)">
+							<mat-option [value]='lang'
+								class="item-lang"
+								*ngFor="let lang of sharedService.languages" 
+								(click)="preventLink($event, lang)">
+								<a style="display: inline-block; font-size: 16px; text-decoration: none; width: 100%;"
+									href="{{locationService.getLocalizationPathWith(lang)}}"
+									[ngStyle]="lang === sharedService.language ? {'color': '#00D8ff'} : {'color': '#fff'}">
+									{{lang}}
+								</a>
+							</mat-option>
+						</mat-select>
+					</mat-form-field>
+				</div>
+				
 			</div>
 
-			<div class="header-nav">
+			<!-- <div class="header-nav">
 				<ul class="auth-block">
 					<ng-container *ngFor="let routConfig of accountLinkConfig;let i = index">
 						<li *ngIf="routConfig.availability?!userActive:userActive"
@@ -63,7 +120,11 @@
 						</mat-select>
 					</mat-form-field>
 				</div>
-			</div>
+			</div> -->
+			<div class="overlay" 
+                #overlay 
+                (click)="toggleSidebar(false)">
+            </div>
 		</div>
 	</div>
 
