--- a/frontend/src/styles/_common.scss
+++ b/frontend/src/styles/_common.scss
@@ -6,6 +6,7 @@ html {
     width: 100%;
     min-width: 320px;
     /* -ms-overflow-style: -ms-autohiding-scrollbar; */
+    min-height: -webkit-fill-available;
 
     :focus {
         outline:none;
@@ -21,8 +22,9 @@ body {
     /* position: relative; */
     /* position:fixed; prevent overscroll bounce */
     /* -webkit-overflow-scrolling: touch; iOS velocity scrolling */
+    min-height: -webkit-fill-available;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     font-size: 16px;
     font-weight: normal;
     font-weight: 400;
