--- a/frontend/src/styles/_typography.scss
+++ b/frontend/src/styles/_typography.scss
@@ -33,6 +33,7 @@
     font-weight: normal;
     font-size: 24px;
     line-height: 36px;
+    font-weight: 600;
     @media screen and (max-width: 1199px) {
         font-size: 18px;
         line-height: 30px;
